--- a/app/src/main/res/layout-v21/chat_item_not_my.xml
+++ b/app/src/main/res/layout-v21/chat_item_not_my.xml
@@ -6,8 +6,6 @@
     android:layout_height="wrap_content"
     android:clipToPadding="false"
     android:paddingVertical="10dp"
-    android:paddingLeft="15dp"
-    android:paddingRight="60dp"
     android:paddingStart="15dp"
     android:paddingEnd="60dp">
 
@@ -15,19 +13,15 @@
         android:id="@+id/avatar"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_alignParentLeft="true"
         android:background="@drawable/user_circle"
         android:scaleType="centerInside"
-        android:layout_alignParentStart="true"
-        android:contentDescription="@string/avatar" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/avatar"
-        android:layout_marginLeft="15dp"
-        android:layout_toRightOf="@+id/avatar"
         android:paddingBottom="4dp"
         android:text="@string/unknownUser"
         android:layout_marginStart="15dp"
@@ -38,11 +32,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/name"
-        android:layout_alignLeft="@+id/name"
+        android:layout_alignStart="@+id/name"
         android:background="@drawable/message_bubble_not_my"
+        android:elevation="2dp"
         android:paddingHorizontal="16dp"
         android:paddingVertical="12dp"
         android:text="@string/unknownMessage"
-        android:textSize="18sp"
-        android:layout_alignStart="@+id/name" />
+        android:textSize="18sp" />
 </RelativeLayout>
