--- a/app/src/main/res/layout-v21/chat_item_my.xml
+++ b/app/src/main/res/layout-v21/chat_item_my.xml
@@ -21,4 +21,14 @@
         android:text="@string/unknownMessage"
         android:layout_alignParentEnd="true" />
 
+    <TextView
+        android:id="@+id/message_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/message_body"
+        android:layout_alignParentEnd="true"
+        android:text="@string/unknownTime"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp" />
+
 </RelativeLayout>
