--- a/app/src/main/res/layout-v21/chat_item_not_my.xml
+++ b/app/src/main/res/layout-v21/chat_item_not_my.xml
@@ -39,4 +39,14 @@
         android:paddingVertical="12dp"
         android:text="@string/unknownMessage"
         android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/message_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/message_body"
+        android:text="@string/unknownTime"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp"
+        android:layout_alignStart="@+id/name" />
 </RelativeLayout>
