--- a/app/src/main/res/layout/chat_item_my.xml
+++ b/app/src/main/res/layout/chat_item_my.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="10dp"
-    android:paddingRight="15dp"
-    android:paddingLeft="60dp"
     android:clipToPadding="false"
+    android:paddingVertical="10dp"
+    android:paddingStart="60dp"
+    android:paddingLeft="60dp"
     android:paddingEnd="15dp"
-    android:paddingStart="60dp">
+    android:paddingRight="15dp">
 
     <TextView
+        android:id="@+id/message_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/message_body"
-        android:background="@drawable/message_bubble_my"
-        android:textColor="#fff"
-        android:padding="10dp"
-        android:textSize="18sp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:background="@drawable/message_bubble_my"
+        android:padding="10dp"
         android:text="@string/unknownMessage"
-        android:layout_alignParentEnd="true" />
+        android:textColor="#fff"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/message_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/message_body"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:text="@string/unknownTime"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp" />
 
 </RelativeLayout>
