not_my 채팅 시각 말풍선 우측 정렬로 변경

--- a/app/src/main/res/layout-v21/chat_item_not_my.xml
+++ b/app/src/main/res/layout-v21/chat_item_not_my.xml
@@ -48,5 +48,5 @@
         android:text="@string/unknownTime"
         android:textColor="@android:color/darker_gray"
         android:textSize="12sp"
-        android:layout_alignStart="@+id/name" />
+        android:layout_alignEnd="@+id/message_body" />
 </RelativeLayout>
