--- a/app/src/main/res/layout/chat_item_not_my.xml
+++ b/app/src/main/res/layout/chat_item_not_my.xml
@@ -51,9 +51,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/message_body"
-        android:layout_alignLeft="@+id/name"
+        android:layout_alignRight="@+id/message_body"
         android:text="@string/unknownTime"
         android:textColor="@android:color/darker_gray"
         android:textSize="12sp"
-        android:layout_alignStart="@+id/name" />
+        android:layout_alignEnd="@+id/message_body" />
 </RelativeLayout>
