--- a/app/src/main/res/layout-v21/chat_item_my.xml
+++ b/app/src/main/res/layout-v21/chat_item_my.xml
@@ -31,4 +31,15 @@
         android:textColor="@android:color/darker_gray"
         android:textSize="12sp" />
 
+    <TextView
+        android:id="@+id/message_seen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/message_body"
+        android:layout_toStartOf="@id/message_time"
+        android:text="@string/messageSeen"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp"
+        tools:ignore="RtlSymmetry" />
+
 </RelativeLayout>
