--- a/app/src/main/res/layout-v21/chat_item_not_my.xml
+++ b/app/src/main/res/layout-v21/chat_item_not_my.xml
@@ -13,19 +13,19 @@
         android:id="@+id/avatar"
         android:layout_width="34dp"
         android:layout_height="34dp"
+        android:layout_alignParentStart="true"
         android:background="@drawable/user_circle"
-        android:scaleType="centerInside"
-        android:layout_alignParentStart="true" />
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/avatar"
-        android:paddingBottom="4dp"
-        android:text="@string/unknownUser"
         android:layout_marginStart="15dp"
-        android:layout_toEndOf="@+id/avatar" />
+        android:layout_toEndOf="@+id/avatar"
+        android:paddingBottom="4dp"
+        android:text="@string/unknownUser" />
 
     <TextView
         android:id="@+id/message_body"
@@ -45,8 +45,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/message_body"
+        android:layout_alignStart="@id/message_body"
         android:text="@string/unknownTime"
         android:textColor="@android:color/darker_gray"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/message_seen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/message_body"
+        android:layout_toEndOf="@+id/message_time"
+        android:text="@string/messageSeen"
+        android:textColor="@android:color/darker_gray"
         android:textSize="12sp"
-        android:layout_alignEnd="@+id/message_body" />
+        tools:ignore="RtlSymmetry" />
 </RelativeLayout>
