--- a/app/src/main/res/layout/chat_item_my.xml
+++ b/app/src/main/res/layout/chat_item_my.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clipToPadding="false"
@@ -31,5 +32,17 @@
         android:text="@string/unknownTime"
         android:textColor="@android:color/darker_gray"
         android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/message_seen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/message_body"
+        android:layout_toStartOf="@id/message_time"
+        android:layout_toLeftOf="@id/message_time"
+        android:text="@string/messageSeen"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp"
+        tools:ignore="RtlSymmetry" />
 
 </RelativeLayout>
