--- a/app/src/main/res/layout/chat_item_not_my.xml
+++ b/app/src/main/res/layout/chat_item_not_my.xml
@@ -6,54 +6,67 @@
     android:layout_height="wrap_content"
     android:clipToPadding="false"
     android:paddingVertical="10dp"
-    android:paddingLeft="15dp"
-    android:paddingRight="60dp"
     android:paddingStart="15dp"
-    android:paddingEnd="60dp">
+    android:paddingLeft="15dp"
+    android:paddingEnd="60dp"
+    android:paddingRight="60dp">
 
     <ImageView
         android:id="@+id/avatar"
         android:layout_width="34dp"
         android:layout_height="34dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:background="@drawable/user_circle"
-        android:scaleType="centerInside"
-        android:layout_alignParentStart="true"
-        android:contentDescription="@string/avatar" />
+        android:contentDescription="@string/avatar"
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/avatar"
+        android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
+        android:layout_toEndOf="@+id/avatar"
         android:layout_toRightOf="@+id/avatar"
         android:paddingBottom="4dp"
-        android:text="@string/unknownUser"
-        android:layout_marginStart="15dp"
-        android:layout_toEndOf="@+id/avatar" />
+        android:text="@string/unknownUser" />
 
     <TextView
         android:id="@+id/message_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/name"
+        android:layout_alignStart="@+id/name"
         android:layout_alignLeft="@+id/name"
         android:background="@drawable/message_bubble_not_my"
         android:paddingHorizontal="16dp"
         android:paddingVertical="12dp"
         android:text="@string/unknownMessage"
-        android:textSize="18sp"
-        android:layout_alignStart="@+id/name" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/message_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/message_body"
-        android:layout_alignRight="@+id/message_body"
+        android:layout_alignStart="@id/message_body"
+        android:layout_alignLeft="@id/message_body"
         android:text="@string/unknownTime"
         android:textColor="@android:color/darker_gray"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/message_seen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/message_body"
+        android:layout_toRightOf="@+id/message_time"
+        android:layout_toEndOf="@+id/message_time"
+        android:text="@string/messageSeen"
+        android:textColor="@android:color/darker_gray"
         android:textSize="12sp"
-        android:layout_alignEnd="@+id/message_body" />
+        tools:ignore="RtlSymmetry" />
+
 </RelativeLayout>
