--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -25,12 +25,13 @@
 
         <EditText
             android:id="@+id/et_message"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:ems="10"
             android:hint="@string/writeMessage"
-            android:inputType="text"
+            android:inputType="textMultiLine"
+            android:maxLines="3"
             android:paddingHorizontal="10dp"
             android:text="" />
 
