--- a/app/src/main/res/layout/chatroom_item.xml
+++ b/app/src/main/res/layout/chatroom_item.xml
@@ -61,6 +61,7 @@
         android:text="0"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/textsize_unreads" />
+        android:textSize="@dimen/textsize_unreads"
+        android:visibility="gone" />
 
 </RelativeLayout>
