--- a/app/src/main/res/drawable-v23/ic_launcher_background.xml
+++ b/app/src/main/res/drawable-v23/ic_launcher_background.xml
@@ -4,6 +4,7 @@
     android:width="108dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/colorPrimary" />
+    <item android:height="108dp"
+        android:width="108dp" android:drawable="@color/colorPrimary" />
 
 </layer-list>
