--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@android:color/holo_blue_bright" />
+    <item android:drawable="@color/colorPrimary" />
 
     <item>
-        <bitmap android:src="@mipmap/ic_message"
-            android:gravity="center" />
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/ic_launcher_round" />
     </item>
 
 </layer-list>
