--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -14,10 +14,10 @@
         android:id="@+id/rv_chats"
         android:layout_weight="2"
         android:divider="#fff"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#fff"
@@ -33,7 +33,19 @@
             android:inputType="textMultiLine"
             android:maxLines="3"
             android:paddingHorizontal="10dp"
+            android:importantForAutofill="no"
             android:text="" />
+
+        <ImageButton
+            android:id="@+id/btn_emoticon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/ic_insert_emoticon_black_24dp"
+            android:contentDescription="@string/choose_emoticon"
+            android:padding="20dp"
+            android:scaleType="fitCenter" />
 
         <ImageButton
             android:id="@+id/btn_sendMessage"
@@ -43,7 +55,34 @@
             android:scaleType="fitCenter"
             android:padding="20dp"
             android:layout_marginHorizontal="10dp"
-            android:background="@drawable/ic_send_black_24dp"/>
+            android:background="@drawable/ic_send_black_24dp"
+            android:contentDescription="@string/send_message" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/emoticonFooter"
+        android:layout_width="match_parent"
+        android:layout_height="230dp"
+        android:background="@android:color/transparent"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/emoticonViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
+        </androidx.viewpager2.widget.ViewPager2>
+
+        <ImageView
+            android:id="@+id/emoticonViewPagerLoader"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/loadingEmoticons"
+            android:visibility="visible" />
+
+    </LinearLayout>
+
 </LinearLayout>
