--- a/app/src/main/res/layout-v21/chat_item_image_my.xml
+++ b/app/src/main/res/layout-v21/chat_item_image_my.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,23 +8,23 @@
     android:paddingStart="60dp"
     android:paddingEnd="15dp">
 
-    <TextView
-        android:id="@+id/message_body"
+    <ImageView
+        android:id="@+id/message_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:background="@drawable/message_bubble_my"
-        android:padding="10dp"
+        android:contentDescription="@string/emoticon"
         android:text="@string/unknownMessage"
         android:textColor="#fff"
-        android:textSize="18sp"
-        android:visibility="visible" />
+        android:textSize="18sp" />
+
 
     <TextView
         android:id="@+id/message_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/message_body"
+        android:layout_below="@id/message_image"
         android:layout_alignParentEnd="true"
         android:text="@string/unknownTime"
         android:textColor="@android:color/darker_gray"
@@ -35,7 +34,7 @@
         android:id="@+id/message_seen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/message_body"
+        android:layout_below="@id/message_image"
         android:layout_toStartOf="@id/message_time"
         android:text="@string/messageSeen"
         android:textColor="@android:color/darker_gray"
