--- a/app/src/main/res/layout/chat_item_not_my.xml
+++ b/app/src/main/res/layout/chat_item_not_my.xml
@@ -44,8 +44,8 @@
         android:paddingHorizontal="16dp"
         android:paddingVertical="12dp"
         android:text="@string/unknownMessage"
-        android:textSize="18sp" />
-
+        android:textSize="18sp"
+        android:visibility="visible" />
     <TextView
         android:id="@+id/message_time"
         android:layout_width="wrap_content"
@@ -62,8 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/message_body"
-        android:layout_toRightOf="@+id/message_time"
         android:layout_toEndOf="@+id/message_time"
+        android:layout_toRightOf="@+id/message_time"
         android:text="@string/messageSeen"
         android:textColor="@android:color/darker_gray"
         android:textSize="12sp"
