force update 기능 수정 채팅방 목록 스낵바 없앰 채팅방 목록 최신 메시지 순으로 정렬 채팅 추가 다이얼로그 디자인 변경

--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -2,6 +2,14 @@
 <defaultsMap>
     <entry>
         <key>minimum_version_code</key>
-        <value>3</value>
+        <value>5</value>
+    </entry>
+    <entry>
+        <key>force_update_enabled</key>
+        <value>true</value>
+    </entry>
+    <entry>
+        <key>google_playstore_url</key>
+        <value>https://play.google.com/store/apps/details?id=com.iseokchan.dorandoran</value>
     </entry>
 </defaultsMap>
