--- a/app/src/main/res/menu/chatlist_actionbar_menus.xml
+++ b/app/src/main/res/menu/chatlist_actionbar_menus.xml
@@ -9,6 +9,12 @@
         app:showAsAction="ifRoom"/>
 
     <item
+        android:id="@+id/action_notification_settings"
+        android:icon="@drawable/ic_notifications_white_24dp"
+        android:title="@string/notificationSettings"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/action_sign_out"
         android:icon="@drawable/ic_exit_to_app_white_24dp"
         android:title="@string/signOut"
